fix style gap add to grid

--- a/bobs/cart/static/cart/css/cart.css
+++ b/bobs/cart/static/cart/css/cart.css
@@ -33,6 +33,7 @@ h4 {
 .cart-grid {
   display: grid;
   grid-template-columns: 2fr 1fr 0.5fr;
+  gap: 1rem;
   align-items: center;
 }
 
